flask-radius/deploy/production/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wifi-ingress
  namespace: sre
spec:
  tls:
    - hosts:
        - wifi.jianguoyun.net.cn
      secretName: jgy-net-cn-prod-tls
  rules:
    - host: wifi.jianguoyun.net.cn
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: vpn-gateway-service
              servicePort: 80
